# beam-extapi

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  beampy.py  beampy_ndvi.py  beampy_test.py  buffer_reference_code.c  debugging_heap.txt  mkjniheader.bat  mkjniheader.sh  mkwin.bat  mkwin32.bak  mkwin32.bat  mkwinall.bat  pom.xml  runc.bat  runpy.bat  setup.cfg  setup.py
docs/: beam-extapi.bmml  beam-extapi.docx  beam-extapi.pptx  beampy-seq.bmml
examples/: beam_capi_test.c  beampy_bmaths.py  beampy_flh.py  beampy_ndvi.py  beampy_ndvi_with_masks.py  beampy_subset.py  beampy_test.py
msvc/: .gitignore  beam-extapi.sln
msvc/beam-capi/: .gitignore  beam-capi.vcxproj  beam-capi.vcxproj.filters
msvc/beam-capi-test/: beam-capi-test.vcxproj  beam-capi-test.vcxproj.filters
msvc/beam-pyapi/: beam-pyapi.vcxproj  beam-pyapi.vcxproj.filters
msvc/beam_capi/: beam_capi.sln  beam_capi.vcxproj  beam_capi.vcxproj.filters
msvc/beam_capi_test/: beam_capi_test.vcxproj  beam_capi_test.vcxproj.filters
msvc/beampy/: beampy.vcxproj  beampy.vcxproj.filters
msvc/pyarraytest/: pyarraytest.vcxproj  pyarraytest.vcxproj.filters
src/main/c/: beam_capi_test.c  beam_jvm.c  beam_jvm.h  beam_util.c  beam_util.h  beamc-test.c  beamc.c  beamc.def  beamc.h  beampy.c  beampy.def  beampy.h  beampy_buffer.c  beampy_buffer.h  beampy_carray.c  beampy_carray.h  beampy_jobject.c  beampy_jobject.h  beampy_jpyconv.c  beampy_jpyconv.h  beampy_jpyutil.c  beampy_jpyutil.h  carray.c  extapi_ExtApi.h  org_esa_beam_extapi_CApi.c  org_esa_beam_extapi_CApi.h  org_esa_beam_extapi_COperator.c  org_esa_beam_extapi_PythonApi.h
src/main/java/extapi/: CLib.java  ExtApi.java  ExtApi2.java  ExtApiTest.java
src/main/java/org/esa/beam/extapi/: CApi.java  COperator.java  PythonApi.java
src/main/python/beampy/: README.txt  beampy-test.py  beampy.py
src/test/java/extapi/: ExtApiTest.java
src/test/java/org/esa/beam/extapi/: CApiTest.java  COperatorTest.java  PythonApiTest.java
